--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
+    "@types/react": "^18.0.14",
     "autoprefixer": "^10.4.7",
     "cypress": "^10.0.3",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.7.4"
   }
 }
