FEAT: Installed and setup the daisyui tailwindcss plugin, and configured the layout of the pages and also included responsiveness ot things

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,9 @@
     ],
     "moduleResolution": "node",
     "allowJs": true,
+    "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
-    "strict": true,
+    "strict": false,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "incremental": true,
