--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "daisyui": "^2.17.0",
+    "flowbite": "^1.4.7",
+    "flowbite-react": "^0.1.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
