--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
+    "react-qr-code": "^2.0.7",
     "react-query": "^3.39.1"
   },
   "devDependencies": {
