--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "daisyui": "^2.17.0",
+    "ethers": "^5.6.9",
     "flowbite": "^1.4.7",
     "flowbite-react": "^0.1.0",
     "next": "12.1.6",
@@ -21,6 +22,7 @@
     "react-query": "^3.39.1"
   },
   "devDependencies": {
+    "@types/node": "^18.0.4",
     "@types/react": "^18.0.14",
     "autoprefixer": "^10.4.7",
     "cypress": "^10.0.3",
