--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ethers": "^5.6.9",
     "flowbite": "^1.4.7",
     "flowbite-react": "^0.1.0",
+    "ipfs-core": "^0.15.4",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-cookie": "^4.1.1",
