CHORE: Cleaned up file and data dependecy and state management handlers

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
     "**/*.ts",
     "**/*.tsx",
     "components/*",
-    "pages/*"
+    "pages/*",
+    "lib/*"
   ],
   "exclude": [
     "node_modules"
