--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "flowbite": "^1.4.7",
     "flowbite-react": "^0.1.0",
     "ipfs-core": "^0.15.4",
+    "ipfs-http-client": "^57.0.3",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-cookie": "^4.1.1",
